# robotframework-browserpom

./: .gitignore  .pre-commit-config.yaml  Makefile  log.html  output.xml  playwright-log.txt  pyproject.toml  readme.md  report.html  robot.toml
.github/workflows/: pipeline.yml
BrowserPOM/: __init__.py  childobject.py  decorator.py  mypy_plugin.py  pageobject.py  uiobject.py
demo/: Content.py  MainPage.py  SearchBar.py  Tile.py  __init__.py  variables.py
docs/: package-lock.json
docs/docs/: contributing.md  examples.md  index.md  installation.md  license.md  tips.md  usage.md
docs/docs/.vitepress/: config.ts
log/: log.html  output.xml  playwright-log.txt  report.html
tests/: bookstore.robot
tests/functional/filtering/: POM.py  filtering.html  filtering.robot
