[tool.poetry]
name = "robotframework-browserpom"
version = "0.3.3"
description = "robotframework-browser library extension to create Page Objects"
authors = ["Hasan Alp Zengin <hasanalpzengin@gmail.com>"]
packages = [{ include = "BrowserPOM" }]
readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Framework :: Robot Framework :: Tool",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
repository = "https://github.com/hasanalpzengin/robotframework-browserpom"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
robotframework = ">=5.1.0"
robotframework-browser = "*"

[tool.poetry.group.test.dependencies]
pytest_robotframework = "^4.3.0"
ruff = "^0.11.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 150
target-version = ['py38', 'py312']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 150
include_trailing_comma = true

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "W503", "F401"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env"
]

[tool.mypy]
python_version = 3.12
check_untyped_defs = false
ignore_missing_imports = true

[tool.pylint]
max-line-length = 150
disable = [
    "C0103",
    "C0114",
    "too-few-public-methods",
    "no-name-in-module"
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "setup.py",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 150
target-version = "py312"
select = ["ALL"]
ignore = ["D205", "N999", "D401", "G004", "D415", "D400", "EM101", "TRY003", "EM102", "S307"]
fix = true
unfixable = []
show-fixes = true
src = ["BrowserPOM"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env"
]
